--- a/index.html
+++ b/index.html
@@ -5,8 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+    <div class="todo_container">
+
+        <h2 class="title">todo list</h2>
+        <div class="input_box">
+            <input type="text" class="todo_input">
+            <button type="submit" class="todo_submit">submit</button>
+            <button class="todo_clear_all">clear all</button>
+        </div>
+
+        <div class="todo">
+            <ul class="todo_ul">
+                <!-- 
+                    <li class="todo_li"> 1. write
+                        <button>done</button>
+                        <button>x</button>
+                    </li>
+                    <li>2. write
+                        <button>done</button>
+                        <button>x</button>
+                    </li>
+                 -->            
+            </ul>
+        </div>
+    </div>
+
+
+
+    <script src="script.js"></script>
 </body>
 </html>
